More command line options.